# rust-custom-types-poc

./: Cargo.toml  expand.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs  test.rs
