[package]
name = "proc_macros"
version = "0.1.0"
authors = ["FernTheDev <15272073+Fernthedev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
